--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
 
+  <!-- Google Fonts  -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600;1,700&family=Varela&family=Varela+Round&display=swap"
+    rel="stylesheet">
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- scc -->
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      /* font-family: 'Josefin Sans', sans-serif;
+      font-family: 'Lora', serif;
+      font-family: 'Varela', sans-serif;
+      font-family: 'Varela Round', sans-serif; */
+    }
+  </style>
+
 
   <title>Blog App</title>
 </head>
@@ -15,4 +35,5 @@
   <div id="root"></div>
 
 </body>
+
 </html>
