--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,8 +11,10 @@
     href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600;1,700&family=Varela&family=Varela+Round&display=swap"
     rel="stylesheet">
 
-    <!-- Fontawesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Fontawesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- scc -->
   <style>
@@ -23,6 +25,16 @@
       font-family: 'Lora', serif;
       font-family: 'Varela', sans-serif;
       font-family: 'Varela Round', sans-serif; */
+    }
+  </style>
+
+
+  <!-- Removing default style of  Links  -->
+  <!-- Global class name -->
+  <style>
+    .link {
+      text-decoration: none;
+      color: inherit;
     }
   </style>
 
