ready for deploy

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,8 +19,8 @@
   <!-- scc -->
   <style>
     * {
-      margin: 0;
-      padding: 0;
+      margin: 0px;
+      padding: 0px;
       /* font-family: 'Josefin Sans', sans-serif;
       font-family: 'Lora', serif;
       font-family: 'Varela', sans-serif;
@@ -29,8 +29,8 @@
   </style>
 
 
-  <!-- Removing default style of  Links  -->
-  <!-- Global class name -->
+
+
   <style>
     .link {
       text-decoration: none;
